Cleaner file for items, modified functions module and notebook 1

--- a/1.Extract_and_load.ipynb
+++ b/1.Extract_and_load.ipynb
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "data = fts.load_jsongz('./raw_data/steam_games.json.gz', mode='rt', encoding='UTF-8')\n",
+    "data = fts.load_json_gz('./raw_data/steam_games.json.gz', mode='rt', encoding='UTF-8')\n",
     "print(len(data))"
    ]
   },
@@ -855,7 +855,7 @@
     }
    ],
    "source": [
-    "revs = fts.load_jsongz('./raw_data/user_reviews.json.gz', mode='rt', encoding='UTF-8')"
+    "revs = fts.load_json_gz('./raw_data/user_reviews.json.gz', mode='rt', encoding='UTF-8')"
    ]
   },
   {
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f0e8420e",
    "metadata": {},
    "outputs": [
@@ -1410,13 +1410,13 @@
     }
    ],
    "source": [
-    "df_items = fts.load_jsongz('./raw_data/users_items.json.gz',\n",
+    "df_items = fts.load_json_gz('./raw_data/users_items.json.gz',\n",
     "                     mode='rt', encoding='UTF-8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b01dd2c2",
    "metadata": {},
    "outputs": [
@@ -1535,7 +1535,7 @@
        "4  [{'item_id': '300', 'item_name': 'Day of Defea...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "511de40d",
    "metadata": {},
    "outputs": [
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ad128124",
    "metadata": {},
    "outputs": [
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "2fe1f906",
    "metadata": {},
    "outputs": [
@@ -1714,31 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "bd1387d4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File saved at \"data/users_items_c.json.gz\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Saving file and discard steam_id, user_url\n",
-    "columns = ['user_id', 'items']\n",
-    "fts.gzip_json_file(\n",
-    "    './data/users_items_c.json.gz',\n",
-    "    df_items,\n",
-    "    subset=columns\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "0b18c7ed",
    "metadata": {},
    "outputs": [
@@ -1751,7 +1727,7 @@
        " 'playtime_2weeks': 0}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1815,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "4a5abf4e",
    "metadata": {},
    "outputs": [
@@ -1847,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "75021417",
    "metadata": {},
    "outputs": [
@@ -1884,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "347ee119",
    "metadata": {},
    "outputs": [
@@ -2003,7 +1979,7 @@
        "[1847730 rows x 3 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2019,12 +1995,12 @@
    "source": [
     "Almost 2M records with zero playtime. \n",
     "\n",
-    "There is no reason to keep those records as aggregations functions will be calculated."
+    "There is no reason to keep those records as aggregation functions will be calculated."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "id": "fac8b086",
    "metadata": {},
    "outputs": [
@@ -2058,309 +2034,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7654ef0",
+   "id": "4c7602e2",
    "metadata": {},
    "source": [
-    "Attempting to merge dataframes to make complex queries."
+    "Saving this cleaner, less heavy dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "c7c904ae",
+   "execution_count": 14,
+   "id": "8c0e36fc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2833973 entries, 0 to 2833972\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column            Dtype \n",
-      "---  ------            ----- \n",
-      " 0   user_id           object\n",
-      " 1   item_id           object\n",
-      " 2   playtime_forever  int64 \n",
-      " 3   developer         object\n",
-      " 4   app_name          object\n",
-      " 5   genres            object\n",
-      " 6   release_year      object\n",
-      "dtypes: int64(1), object(6)\n",
-      "memory usage: 151.4+ MB\n"
+      "File saved at \"data/items.json.gz\"\n"
      ]
     }
    ],
    "source": [
-    "# Only this columns needed\n",
-    "columns = ['item_id', 'developer', 'app_name', 'genres', 'release_year']\n",
-    "\n",
-    "games_df = df_games[columns]\n",
-    "\n",
-    "# Merging\n",
-    "merged = pd.merge(items_df, games_df, how='inner', on='item_id')\n",
-    "\n",
-    "merged.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "d448964f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>item_id</th>\n",
-       "      <th>playtime_forever</th>\n",
-       "      <th>developer</th>\n",
-       "      <th>app_name</th>\n",
-       "      <th>genres</th>\n",
-       "      <th>release_year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>76561197970982479</td>\n",
-       "      <td>10</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Valve</td>\n",
-       "      <td>Counter-Strike</td>\n",
-       "      <td>[Action]</td>\n",
-       "      <td>2000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>doctr</td>\n",
-       "      <td>10</td>\n",
-       "      <td>93</td>\n",
-       "      <td>Valve</td>\n",
-       "      <td>Counter-Strike</td>\n",
-       "      <td>[Action]</td>\n",
-       "      <td>2000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>corrupted_soul</td>\n",
-       "      <td>10</td>\n",
-       "      <td>108</td>\n",
-       "      <td>Valve</td>\n",
-       "      <td>Counter-Strike</td>\n",
-       "      <td>[Action]</td>\n",
-       "      <td>2000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>WeiEDKrSat</td>\n",
-       "      <td>10</td>\n",
-       "      <td>328</td>\n",
-       "      <td>Valve</td>\n",
-       "      <td>Counter-Strike</td>\n",
-       "      <td>[Action]</td>\n",
-       "      <td>2000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>death-hunter</td>\n",
-       "      <td>10</td>\n",
-       "      <td>6275</td>\n",
-       "      <td>Valve</td>\n",
-       "      <td>Counter-Strike</td>\n",
-       "      <td>[Action]</td>\n",
-       "      <td>2000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             user_id item_id  playtime_forever developer        app_name  \\\n",
-       "0  76561197970982479      10                 6     Valve  Counter-Strike   \n",
-       "1              doctr      10                93     Valve  Counter-Strike   \n",
-       "2     corrupted_soul      10               108     Valve  Counter-Strike   \n",
-       "3         WeiEDKrSat      10               328     Valve  Counter-Strike   \n",
-       "4       death-hunter      10              6275     Valve  Counter-Strike   \n",
-       "\n",
-       "     genres release_year  \n",
-       "0  [Action]         2000  \n",
-       "1  [Action]         2000  \n",
-       "2  [Action]         2000  \n",
-       "3  [Action]         2000  \n",
-       "4  [Action]         2000  "
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merged.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "cf63ee02",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>playtime_forever</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>user_id</th>\n",
-       "      <th>release_year</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">--000--</th>\n",
-       "      <th>2006</th>\n",
-       "      <td>925</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2009</th>\n",
-       "      <td>5329</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010</th>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011</th>\n",
-       "      <td>6522</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012</th>\n",
-       "      <td>109389</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">zzzmidmiss</th>\n",
-       "      <th>2010</th>\n",
-       "      <td>518</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011</th>\n",
-       "      <td>2377</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012</th>\n",
-       "      <td>6312</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013</th>\n",
-       "      <td>115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014</th>\n",
-       "      <td>54</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>659729 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         playtime_forever\n",
-       "user_id    release_year                  \n",
-       "--000--    2006                       925\n",
-       "           2009                      5329\n",
-       "           2010                        22\n",
-       "           2011                      6522\n",
-       "           2012                    109389\n",
-       "...                                   ...\n",
-       "zzzmidmiss 2010                       518\n",
-       "           2011                      2377\n",
-       "           2012                      6312\n",
-       "           2013                       115\n",
-       "           2014                        54\n",
-       "\n",
-       "[659729 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Computing an aggregation\n",
-    "sum_year = merged[['user_id', 'release_year', 'playtime_forever']].groupby(by=['user_id', 'release_year']).sum()\n",
-    "\n",
-    "sum_year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "d979d5d2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "MultiIndex: 659729 entries, ('--000--', 2006) to ('zzzmidmiss', 2014)\n",
-      "Data columns (total 1 columns):\n",
-      " #   Column            Non-Null Count   Dtype\n",
-      "---  ------            --------------   -----\n",
-      " 0   playtime_forever  659729 non-null  int64\n",
-      "dtypes: int64(1)\n",
-      "memory usage: 8.7+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "sum_year.info()"
+    "# What if i save this dataframe?\n",
+    "fts.gzip_json_file(\n",
+    "    './data/items.json.gz',\n",
+    "    df=items_df,\n",
+    ")"
    ]
   },
   {
