Final version for notebook 1 and 2, less heavy json files

--- a/1.Extract_and_load.ipynb
+++ b/1.Extract_and_load.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "b2657cbd-2be9-43d9-ac0a-897c68780d49",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "<module 'functions' from '/home/juancml/Personal-Profesional/henry/pi_mlops/functions.py'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "d5f11421",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "c0d1fc97",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "4   NaN          NaN  NaN       NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "fa4a75a3",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
        "4        False  773570               NaN  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "329c60cc",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
        "30961  NaN  Rocksteady Studios,Feral Interactive (Mac)  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "d28803db",
    "metadata": {},
    "outputs": [
@@ -731,7 +731,7 @@
        "30961     NaN  Rocksteady Studios,Feral Interactive (Mac)  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "bbf58495",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "a957f0f4",
    "metadata": {},
    "outputs": [],
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "932eaa8c",
    "metadata": {},
    "outputs": [
@@ -812,7 +812,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved at \"data/steam_games_c.json.gz\"\n"
+      "File saved at \"data/games.json.gz\"\n"
      ]
     }
    ],
@@ -822,7 +822,7 @@
     "# Keeping ids, genres, specs, prices, developer, app_names, tags\n",
     "# Creating a gzip crompessed json file\n",
     "columns = ['item_id', 'developer', 'app_name', 'genres','tags', 'specs','release_year', 'price']\n",
-    "fts.gzip_json_file('./data/steam_games_c.json.gz',\n",
+    "fts.gzip_json_file('./data/games.json.gz',\n",
     "               df=df_games,\n",
     "               subset=columns)"
    ]
@@ -1755,38 +1755,6 @@
     "The result is a huge dataset, but it will be easier to query and analyze data.\n",
     "\n",
     "The cell below can take several minutes to execute, as well as creating a pandas DataFrame with it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "206541c6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lenght: 5094082\n"
-     ]
-    }
-   ],
-   "source": [
-    "items = []\n",
-    "# For each user in data\n",
-    "for i in df_items.index:\n",
-    "    user_id = df_items.loc[i,'user_id']\n",
-    "    # for each item in user's items\n",
-    "    for item in df_items.loc[i,'items']:\n",
-    "        # Keeping only item_id and playtime_forever\n",
-    "        items.append(\n",
-    "            {\n",
-    "                'user_id': user_id,\n",
-    "                'item_id': item['item_id'],\n",
-    "                'playtime': item['playtime_forever']\n",
-    "            }\n",
-    "        )\n",
-    "print('Lenght:', len(items))"
    ]
   },
   {
