--- a/1.Extract_and_load.ipynb
+++ b/1.Extract_and_load.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "b2657cbd-2be9-43d9-ac0a-897c68780d49",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "<module 'functions' from '/home/juancml/Personal-Profesional/henry/pi_mlops/functions.py'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "d5f11421",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "c0d1fc97",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "4   NaN          NaN  NaN       NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "fa4a75a3",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
        "4        False  773570               NaN  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "329c60cc",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
        "30961  NaN  Rocksteady Studios,Feral Interactive (Mac)  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "d28803db",
    "metadata": {},
    "outputs": [
@@ -731,7 +731,7 @@
        "30961     NaN  Rocksteady Studios,Feral Interactive (Mac)  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "bbf58495",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "a957f0f4",
    "metadata": {},
    "outputs": [],
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "15efae19",
    "metadata": {},
    "outputs": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "c206c43e",
    "metadata": {},
    "outputs": [
@@ -958,12 +958,13 @@
        "4  [{'funny': '3 people found this review funny',...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# To Dataframe\n",
     "df_revs = pd.DataFrame(revs)\n",
     "print(df_revs.info())\n",
     "df_revs.head()"
@@ -979,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "5e85d5f8",
    "metadata": {},
    "outputs": [
@@ -989,7 +990,7 @@
        "25485"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "386983ac",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1012,7 @@
        "309"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "4aa1ae8f",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "2738f70c",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "7a73839e",
    "metadata": {},
    "outputs": [
@@ -1125,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "47796120",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "0a4aa903",
    "metadata": {},
    "outputs": [
@@ -1169,169 +1170,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "58430\n"
+      "Shape of the resulting array: (58430, 5)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>posted</th>\n",
-       "      <th>item_id</th>\n",
-       "      <th>recommend</th>\n",
-       "      <th>review</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>76561197970982479</td>\n",
-       "      <td>Posted November 5, 2011.</td>\n",
-       "      <td>1250</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Simple yet with great replayability. In my opi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>76561197970982479</td>\n",
-       "      <td>Posted July 15, 2011.</td>\n",
-       "      <td>22200</td>\n",
-       "      <td>True</td>\n",
-       "      <td>It's unique and worth a playthrough.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>76561197970982479</td>\n",
-       "      <td>Posted April 21, 2011.</td>\n",
-       "      <td>43110</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Great atmosphere. The gunplay can be a bit chu...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>js41637</td>\n",
-       "      <td>Posted June 24, 2014.</td>\n",
-       "      <td>251610</td>\n",
-       "      <td>True</td>\n",
-       "      <td>I know what you think when you see this title ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>js41637</td>\n",
-       "      <td>Posted September 8, 2013.</td>\n",
-       "      <td>227300</td>\n",
-       "      <td>True</td>\n",
-       "      <td>For a simple (it's actually not all that simpl...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>js41637</td>\n",
-       "      <td>Posted November 29, 2013.</td>\n",
-       "      <td>239030</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Very fun little game to play when your bored o...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>evcentric</td>\n",
-       "      <td>Posted February 3.</td>\n",
-       "      <td>248820</td>\n",
-       "      <td>True</td>\n",
-       "      <td>A suitably punishing roguelike platformer.  Wi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>evcentric</td>\n",
-       "      <td>Posted December 4, 2015.</td>\n",
-       "      <td>370360</td>\n",
-       "      <td>True</td>\n",
-       "      <td>\"Run for fun? What the hell kind of fun is that?\"</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>evcentric</td>\n",
-       "      <td>Posted November 3, 2014.</td>\n",
-       "      <td>237930</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Elegant integration of gameplay, story, world ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>evcentric</td>\n",
-       "      <td>Posted October 15, 2014.</td>\n",
-       "      <td>263360</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Random drops and random quests, with stat poin...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             user_id                     posted item_id  recommend  \\\n",
-       "0  76561197970982479   Posted November 5, 2011.    1250       True   \n",
-       "1  76561197970982479      Posted July 15, 2011.   22200       True   \n",
-       "2  76561197970982479     Posted April 21, 2011.   43110       True   \n",
-       "3            js41637      Posted June 24, 2014.  251610       True   \n",
-       "4            js41637  Posted September 8, 2013.  227300       True   \n",
-       "5            js41637  Posted November 29, 2013.  239030       True   \n",
-       "6          evcentric         Posted February 3.  248820       True   \n",
-       "7          evcentric   Posted December 4, 2015.  370360       True   \n",
-       "8          evcentric   Posted November 3, 2014.  237930       True   \n",
-       "9          evcentric   Posted October 15, 2014.  263360       True   \n",
-       "\n",
-       "                                              review  \n",
-       "0  Simple yet with great replayability. In my opi...  \n",
-       "1               It's unique and worth a playthrough.  \n",
-       "2  Great atmosphere. The gunplay can be a bit chu...  \n",
-       "3  I know what you think when you see this title ...  \n",
-       "4  For a simple (it's actually not all that simpl...  \n",
-       "5  Very fun little game to play when your bored o...  \n",
-       "6  A suitably punishing roguelike platformer.  Wi...  \n",
-       "7  \"Run for fun? What the hell kind of fun is that?\"  \n",
-       "8  Elegant integration of gameplay, story, world ...  \n",
-       "9  Random drops and random quests, with stat poin...  "
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import functions as utils\n",
-    "importlib.reload(utils)\n",
-    "\n",
-    "revs = utils.json_unpacking(df_revs, where='reviews',\n",
+    "revs = fts.json_unpacking(df_revs, where='reviews',\n",
     "                             values=['posted', 'item_id', 'recommend', 'review'],\n",
     "                             old_colums=['user_id'])\n",
     "\n",
     "# Creating a dataFrame from that list\n",
-    "df_revs = pd.DataFrame(revs)\n",
-    "df_revs.head(10)"
+    "# df_revs = pd.DataFrame(revs)\n",
+    "# df_revs.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "554cc5dc",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1210,7 @@
     }
    ],
    "source": [
-    "df_revs.info()"
+    "revs.info()"
    ]
   },
   {
@@ -1396,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "f0e8420e",
    "metadata": {},
    "outputs": [
@@ -1416,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "b01dd2c2",
    "metadata": {},
    "outputs": [
@@ -1535,7 +1390,7 @@
        "4  [{'item_id': '300', 'item_name': 'Day of Defea...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "511de40d",
    "metadata": {},
    "outputs": [
@@ -1588,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "ad128124",
    "metadata": {},
    "outputs": [
@@ -1630,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "f0d65df5",
    "metadata": {},
    "outputs": [
@@ -1638,18 +1493,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of users with no items: 16714\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_revs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNumber of users with no items:\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m      2\u001b[0m       \u001b[38;5;28mlen\u001b[39m(df_items[df_items[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mitems_count\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m]))\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# List of unique users with reviews registered\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m rev_users \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[43mdf_revs\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muser_id\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39munique())\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Users without any item\u001b[39;00m\n\u001b[1;32m      8\u001b[0m no_items_users \u001b[38;5;241m=\u001b[39m df_items[df_items[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mitems_count\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39muser_id\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df_revs' is not defined"
+      "Number of users with no items: 16714\n",
+      "How many of them have reviewed something?\n",
+      " -> 2841\n"
      ]
     }
    ],
@@ -1658,7 +1504,7 @@
     "      len(df_items[df_items['items_count'] == 0]))\n",
     "\n",
     "# List of unique users with reviews registered\n",
-    "rev_users = list(df_revs['user_id'].unique())\n",
+    "rev_users = list(revs['user_id'].unique())\n",
     "\n",
     "# Users without any item\n",
     "no_items_users = df_items[df_items['items_count'] == 0].user_id\n",
@@ -1680,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "2fe1f906",
    "metadata": {},
    "outputs": [
@@ -1714,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "0b18c7ed",
    "metadata": {},
    "outputs": [
@@ -1727,7 +1573,7 @@
        " 'playtime_2weeks': 0}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1759,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "4a5abf4e",
    "metadata": {},
    "outputs": [
@@ -1767,7 +1613,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5094082\n"
+      "Shape of the resulting array: (5094082, 3)\n"
      ]
     }
    ],
@@ -1791,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "75021417",
    "metadata": {},
    "outputs": [
@@ -1813,9 +1659,7 @@
     }
    ],
    "source": [
-    "# Converting to a DataFrame \n",
-    "items_df = pd.DataFrame(items)\n",
-    "items_df.info()"
+    "items.info()"
    ]
   },
   {
@@ -1828,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "347ee119",
    "metadata": {},
    "outputs": [
@@ -1947,13 +1791,13 @@
        "[1847730 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "items_df[items_df['playtime_forever'] == 0]"
+    "items[items['playtime_forever'] == 0]"
    ]
   },
   {
@@ -1968,7 +1812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "fac8b086",
    "metadata": {},
    "outputs": [
@@ -1991,13 +1835,13 @@
    ],
    "source": [
     "# Dropping\n",
-    "items_df.drop(\n",
-    "    index = items_df[items_df['playtime_forever'] == 0].index,\n",
+    "items.drop(\n",
+    "    index = items[items['playtime_forever'] == 0].index,\n",
     "    inplace=True\n",
     "    )\n",
     "\n",
     "# Checking new info and size\n",
-    "items_df.info()"
+    "items.info()"
    ]
   },
   {
@@ -2026,7 +1870,7 @@
     "# What if i save this dataframe?\n",
     "fts.gzip_json_file(\n",
     "    './data/items.json.gz',\n",
-    "    df=items_df,\n",
+    "    df=items,\n",
     ")"
    ]
   },
