Fixing ETL, pontential endpoints finished

--- a/1.Extract_and_load.ipynb
+++ b/1.Extract_and_load.ipynb
@@ -780,6 +780,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "60d7ba5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Null handling\n",
+    "df_games.fillna(\n",
+    "    {\n",
+    "        'developer': 'Unknown',\n",
+    "        'genres': 'No genre',\n",
+    "        'app_name': 'empty',\n",
+    "        'release_date': 'unknown',\n",
+    "        'tags': 'empty',\n",
+    "        'specs': 'No specifications',\n",
+    "        'price': 0\n",
+    "    },\n",
+    "    inplace=True\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bdd60703",
    "metadata": {},
@@ -791,20 +813,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "a957f0f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Converting release date column to Timestamp series\n",
-    "df_games['release_date'] = pd.to_datetime(df_games['release_date'], errors='coerce')\n",
     "# Getting only the year\n",
-    "df_games['release_date'] = df_games['release_date'].map(lambda date: date.year, na_action='ignore')"
+    "df_games['release_date'] = df_games['release_date'].apply(lambda x: x[:4] if x != 'unknown' else x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "932eaa8c",
    "metadata": {},
    "outputs": [
